data/derived/comb/progs/unify/prog8556.ml.out
Characters 47-93:
  let sampleExpr1 = Divide(Thresh(VarX,VarY,VarX,(Times(Sine(VarX)),Cosine(Average(VarX,VarY)))),VarY);;
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
